--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ button {
 .card-container {
     width: 240px;
     padding: 18px;
-    margin: 6px;
+    margin: 6px 0;
     background: white;
-    border: 1px solid black;
+    border-radius: 5px;
     display: inline-block;
     transition: all 5s;
 }
@@ -39,7 +39,7 @@ button {
 form {
     background-color: #ffff;
     border-radius: 5px;
-    width: 95%;
+    /* width: 95%; */
     padding: 10px;
 }
 
